--- a/styles/main.scss
+++ b/styles/main.scss
@@ -63,3 +63,52 @@
 
 } 
 
+/*================ Section: FAQ ================*/
+
+.faq-row {
+
+
+    padding: 20px 0;
+    border-bottom: 1px solid #cccccc;
+
+    .faq-question {
+
+    	position: relative;
+    	cursor: pointer;
+
+    	&:after{
+		    content: "+";
+		    right: 0;
+		    position: absolute;
+		    top: -6px;
+    		font-size: 20px;
+    		font-weight: bold;
+
+		}
+	}
+
+	&.active {
+		.faq-question {
+
+	    	&:after{
+			    content: "-";
+			    right:2px;
+			}
+		}
+
+		.faq-answer {
+			max-height: 50px;
+		}
+	}
+
+	.faq-answer {
+		max-height: 0;
+		overflow: hidden;
+		transition: max-height 0.5s ease-out;
+
+		span {
+			padding: 20px 0;
+			display: block;
+		}
+	}
+}
