add in some commenting

--- a/sections/questions.liquid
+++ b/sections/questions.liquid
@@ -79,7 +79,7 @@
   
   document.addEventListener('DOMContentLoaded', (e) => {
 
-    // Detect clicks on faq section and make any clicked row 'active'
+    // Detect clicks on faq section and toggle any clicked rows with 'active' class
     const wrapper = document.querySelector('.faq-wrapper');
 
     wrapper.addEventListener("click", function(e) {
